# ng-public

./: .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  README.md  run.sh
assets/: test.scn
etc/: info_ios.plist  launch.storyboard
src/: assets.nim  boot.nim  common.nim  core.nim  events.nim  graphics.nim  index.css  index.html  kernel.nim  library.js  main.c  main.nim  ng.nim  nim.cfg  physics.nim  precomp.h  sdl_demo.nim  timing.nim  types.nim  uis.nim
src/core/: events.nim  graphics.nim  kernel.nim  kernel_test.nim  physics.nim  timing.nim  uis.nim
src/defs/: triggers.nim  types.nim
src/engine/: events.nim  graphics.nim  kernel.nim  kernel_test.nim  ng.nim  physics.nim  profiling.nim  uis.nim  utils.nim
src/game/: all.nim  editing.nim  editing_ui.nim  feet.nim  inspector.nim  player.nim  saveload.nim  saveload_impl.nim  sprite.nim  systems.nim  triggers.nim  types.nim
src/plumb/: editing.nim  inspector.nim  saveload.nim  saveload_impl.nim
src/shaders/: test.frag
src/systems/: all.nim  animation.nim  feet.nim  friction.nim  player.nim  position.nim  sprite.nim  view_follow.nim  world_bounds.nim
src/web/: index.css  index.html  library.js
web/: index.html  index.nim  nim.cfg
